--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 name: "Barcode"
 description: "Reads data from barcode scanner to create a shopping list"
-version: "0.0.15"
+version: "0.0.19"
 slug: "barcode"
 init: false
 arch:
@@ -15,3 +15,5 @@ schema:
   keyboard_device: device
 full_access: true
 homeassistant_api: true
+ports:
+  8888/tcp: 8888
